模拟OOM及gc日志说明